--- a/package.json
+++ b/package.json
@@ -9,18 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.0",
+    "@types/react-date-range": "^1.4.9",
+    "geo-lib": "^0.4.0",
+    "geolib": "^3.3.4",
+    "mapbox-gl": "^3.7.0",
+    "next": "14.2.15",
+    "nextjs-toploader": "^3.7.15",
     "react": "^18",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18",
-    "next": "14.2.15"
+    "react-map-gl": "^7.1.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.15",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.15"
+    "typescript": "^5"
   }
 }
